JVM: garbage collection flags part 2